# vericl

./: Cargo.toml  README.md
.github/workflows/: conformance.yml
crates/vericl/: Cargo.toml
crates/vericl-examples/: Cargo.toml
crates/vericl-examples/evidence/: cooperative_fallback.json  vericl.json  vericl_f64.json
crates/vericl-examples/src/: lib.rs
crates/vericl-examples/tests/: conformance.rs  conformance_f64.rs  cooperative.rs  cooperative_fallback.rs  f64_wgpu_unsound.rs  float_method_whitelist.rs  float_method_whitelist_f64.rs  host_shim_gpu_ground_truth.rs  interp_crosscheck.rs  line_shim_gpu_ground_truth.rs  vector_conformance.rs
crates/vericl-ir/: Cargo.toml
crates/vericl-ir/src/: fuzz.rs  hash.rs  interp.rs  lib.rs  prover.rs
crates/vericl-macros/: Cargo.toml
crates/vericl-macros/src/: coop.rs  lib.rs  suite.rs
crates/vericl/src/: compare.rs  contract.rs  evidence.rs  host_shims.rs  lib.rs  line.rs  panic.rs  rng.rs  shared.rs  trust.rs
docs/: certificates-decision.md  design-line-vector.md  design-shared-memory.md  design-view-slice.md  dogfood-2026-07.md  ecosystem-survey-2026-07.md  guide.md  ideation-charter.md  interpreter.md  ir-research.md  release-checklist.md  upgrade-drill-2026-07.md
docs/prototypes/: ir_extraction.rs  smt_bounds_check.rs
evidence/: vericl.json
tasks/: todo.md
