[package]
name = "vericl-ir"
description = "CubeCL IR extraction, kernel identity hashing, and SMT out-of-bounds proving for vericl"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cubecl = { workspace = true }
easy-smt = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
