[package]
name = "vericl-macros"
description = "Contract and suite attribute/function macros for vericl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["cubecl", "gpu", "kernel", "verification", "macro"]
categories = ["development-tools::procedural-macro-helpers", "development-tools::testing"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
sha2 = { workspace = true }
